@@ -1,8 +1,8 @@
 Bundle: VR
 Priority: recommended
 Contains: MASS class nnet spatial
-Version: 7.2-9
-Date: 2004-10-24
+Version: 7.2-10
+Date: 2004-11-03
 Depends: R (>= 2.0.0), graphics, stats
 Suggests: lattice, nlme, survival
 Author: S original by Venables & Ripley.
@@ -13,4 +13,4 @@ BundleDescription: Functions and datasets to support Venables and
   Ripley, 'Modern Applied Statistics with S' (4th edition).
 License: GPL (version 2 or later)  See file LICENCE.
 URL: http://www.stats.ox.ac.uk/pub/MASS4/
-Packaged: Sun Oct 24 10:41:50 2004; ripley
+Packaged: Wed Nov  3 09:02:23 2004; ripley
