@@ -97,6 +97,7 @@ Library MASS
 - polr() now works with transformed intercepts, and usually converges
   better (contributed by David Firth).
 - polr() handles a rank-deficient model matrix.
+- polr() now returns the method used, and uses it for predictions.
 
 
 Library class
@@ -132,3 +133,4 @@ Library spatial
 - PP datasets moved from data to ppdata
 - no longer duplicate topo dataset from MASS
 - Strauss and SSI are now interruptible
+
